--- a/Ligas.vbproj
+++ b/Ligas.vbproj
@@ -53,7 +53,7 @@
 
   <ItemGroup>
     <None Update="liga.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
     <None Update="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
